--- a/diy-demo/canvasJS/canvasImg.html
+++ b/diy-demo/canvasJS/canvasImg.html
@@ -80,6 +80,7 @@
       currentTool: 'arrow', // 当前默认模式，默认为箭头
       currentWidth: 2, // 宽度，默认为2
       endPointWidth: 4, // 箭头、圆、矩形的端点宽度，默认为4
+      changeToolTypeAuto: true, // 是否允许自动切换当前操作类型，在箭头、文本、矩形、圆中切换，默认true, 需结合监听 toolTypeChange 事件，获取修改后的type, 更新操作栏
     })
     document.addEventListener('DOMContentLoaded', () => {
       // 工具按钮设置
@@ -125,10 +126,14 @@
       fontSizeNode.addEventListener('change', changeFontSize)
       changeFontSize()
 
-      function setTool(tool) {
+      function setTool(tool, noCallInsanceApi = true) {
         currentTool = tool
-        canvasInstance.setCurrentToolType(tool); // 设置当前操作类型
         console.log('currentTool', tool);
+
+        if(noCallInsanceApi) {
+        // 需要实例状态修改
+          canvasInstance.setCurrentToolType(tool); // 设置当前操作类型
+        }
         arrowButton.classList.toggle('active', tool === 'arrow');
         mosaicButton.classList.toggle('active', tool === 'mosaic');
         scribbleButton.classList.toggle('active', tool === 'scribble');
@@ -207,6 +212,15 @@
         checkRedo: (canRedo) => {
           console.log('当前是否允许取消撤销', canRedo)
         },
+        toolTypeChange: (type) => {
+          // 当内部点击等操作修改了图形类型,会触发相应回调
+          // 触发场景：
+          // 1. 开启了允许自动切换操作类型，changeToolTypeAuto = true
+          // 2. 在绘制了箭头、圆、矩形、文本中的一种以上后，鼠标点击其他类型（假如当前是箭头类型，然后鼠标再点击了圆）
+          // 3. 为了快速便于编辑，操作类型将切换为圆，为交互一致，外层工具栏也应该切换操作类型为圆
+          console.warn('当前操作类型自动切换为:', type)
+          setTool(type, false)
+        }
       })
     })
   </script>
