--- a/diy-demo/canvasJS/canvasImg.html
+++ b/diy-demo/canvasJS/canvasImg.html
@@ -8,6 +8,7 @@
   <style>
     #toolbar {
       margin-bottom: 10px;
+      width: 600px;
     }
 
     #mosaicCanvas {
@@ -58,7 +59,7 @@
     <input type="color" id="fontColorPicker" value="#ff0000" />
     <input type="number" id="strokeWidth" value="4" />
   </div>
-  <div class="" id="canvas-wrapper" style="width: 600px;height: 400px;">
+  <div class="" id="canvas-wrapper" style="width: 600px;height: 400px;overflow: hidden;background-color: lightgray;">
     <canvas id="canvasId" width="600" height="400"></canvas>
   </div>
 
