--- a/diy-demo/canvasJS/canvasImg.html
+++ b/diy-demo/canvasJS/canvasImg.html
@@ -81,6 +81,9 @@
       currentTool: 'arrow', // 当前默认模式，默认为箭头
       currentWidth: 2, // 宽度，默认为2
       endPointWidth: 4, // 箭头、圆、矩形的端点宽度，默认为4
+      scaleRadioMax: 3, // 缩放最大比例
+      scaleRadioMin: 3, // 缩放最小比例
+      scaleChangeValue: 0.1, // 缩放过渡（递增、递减）时的比例
       changeToolTypeAuto: true, // 是否允许自动切换当前操作类型，在箭头、文本、矩形、圆中切换，默认true, 需结合监听 toolTypeChange 事件，获取修改后的type, 更新操作栏
     })
     document.addEventListener('DOMContentLoaded', () => {
@@ -209,10 +212,29 @@
       canvasInstance.registerCallback({
         checkUndo: (canUndo) => {
           console.log('当前是否允许撤销', canUndo)
+          if(canUndo) {
+            undoButton.removeAttribute('disabled')
+          } else {
+            undoButton.setAttribute('disabled', true)
+          }
         },
         checkRedo: (canRedo) => {
           console.log('当前是否允许取消撤销', canRedo)
+          if(canRedo) {
+            redoButton.removeAttribute('disabled')
+          } else {
+            redoButton.setAttribute('disabled', true)
+          }
         },
+        // 监听是否允许复原
+        checkClear:(canClear)=> {
+          if(canClear) {
+            clearBtn.removeAttribute('disabled')
+          } else {
+            clearBtn.setAttribute('disabled', true)
+          }
+        },
+        // 监听操作类型变化
         toolTypeChange: (type) => {
           // 当内部点击等操作修改了图形类型,会触发相应回调
           // 触发场景：
@@ -221,6 +243,22 @@
           // 3. 为了快速便于编辑，操作类型将切换为圆，为交互一致，外层工具栏也应该切换操作类型为圆
           console.warn('当前操作类型自动切换为:', type)
           setTool(type, false)
+        },
+        // 监听是否允许放大，当缩放达到最大值（scaleRadioMax），则禁用放大
+        checkEnlarge: (isMax)=> {
+          if(isMax) {
+            enlargeBtn.setAttribute('disabled', true)
+          } else {
+            enlargeBtn.removeAttribute('disabled')
+          }
+        },
+        // 监听是否允许缩小，当缩放达到最小值（scaleRadioMin），则禁用缩小
+        checkReduce: (isMin)=> {
+          if(isMin) {
+            reduceBtn.setAttribute('disabled', true)
+          } else {
+            reduceBtn.removeAttribute('disabled')
+          }
         }
       })
     })
