--- a/diy-demo/canvasJS/canvasImg.html
+++ b/diy-demo/canvasJS/canvasImg.html
@@ -18,6 +18,7 @@
 
     .button {
       margin-right: 10px;
+      margin-bottom: 10px;
       padding: 5px 10px;
       cursor: pointer;
       background-color: lightgray;
