--- a/diy-demo/canvasJS/canvasImg.html
+++ b/diy-demo/canvasJS/canvasImg.html
@@ -76,6 +76,8 @@
     if (blobImg) {
       imgSrc = blobImg
     }
+    // 使用注意事项:
+    // 1. 使用时需要传入两个标签，外层容器标签ID 和canvas标签ID，
     const canvasInstance = new CanvasImgEditor({
       parentId: 'canvas-wrapper',
       canvasId: 'canvasId',
@@ -84,7 +86,7 @@
       currentWidth: 2, // 宽度，默认为2
       endPointWidth: 4, // 箭头、圆、矩形的端点宽度，默认为4
       scaleRadioMax: 3, // 缩放最大比例
-      scaleRadioMin: 3, // 缩放最小比例
+      scaleRadioMin: 0.2, // 缩放最小比例
       scaleChangeValue: 0.1, // 缩放过渡（递增、递减）时的比例
       changeToolTypeAuto: true, // 是否允许自动切换当前操作类型，在箭头、文本、矩形、圆中切换，默认true, 需结合监听 toolTypeChange 事件，获取修改后的type, 更新操作栏
     })
