--- a/diy-demo/canvasJS/canvasImg.html
+++ b/diy-demo/canvasJS/canvasImg.html
@@ -67,8 +67,8 @@
 
   <script type="module">
 
-    // import CanvasImgEditor from './canvasImgEditor.js'
-    import CanvasImgEditor from './modularity/canvasImgEditor.js'
+    import CanvasImgEditor from './canvasImgEditor.js'
+    // import CanvasImgEditor from './modularity/canvasImgEditor.js'
     // import CanvasImgEditor from './index.esm.js'
     let imgSrc = 'https://cdn.pixabay.com/photo/2024/01/02/10/33/stream-8482939_1280.jpg' // 替换为你要使用的图片路径(纵向)
     // 模拟传入的是blob ，blob不好存储，先转换成base64存储到浏览器
@@ -92,7 +92,7 @@
       changeToolTypeAuto: true, // 是否允许自动切换当前操作类型，在箭头、文本、矩形、圆中切换，默认true, 需结合监听 toolTypeChange 事件，获取修改后的type, 更新操作栏
       supportKeyboardUndo: true, // 是否支持键盘快捷键撤销绘制，默认false，建议仅在开发阶段使用，以免页面视图中误撤销
       imgPaintAuto: true, // 是否保留原图片宽高比，居中展示
-      imgPaintAutoBgColor: 'yellow' // 图片背景颜色，图片宽高比不能百分百填充时，剩余区域的背景颜色
+      imgPaintAutoBgColor: 'yellow' // 图片背景颜色，图片宽高比不能百分百填充时，剩余区域的背景颜色,默认白色
     })
     document.addEventListener('DOMContentLoaded', () => {
       // 工具按钮设置
