feat: 模块化调整

--- a/diy-demo/canvasJS/canvasImg.html
+++ b/diy-demo/canvasJS/canvasImg.html
@@ -67,8 +67,8 @@
 
   <script type="module">
 
-    import CanvasImgEditor from './canvasImgEditor.js'
-    // import CanvasImgEditor from './modularity/canvasImgEditor.js'
+    // import CanvasImgEditor from './canvasImgEditor.js'
+    import CanvasImgEditor from './modularity/canvasImgEditor.js'
     // import CanvasImgEditor from './index.esm.js'
     let imgSrc = 'https://cdn.pixabay.com/photo/2024/01/02/10/33/stream-8482939_1280.jpg' // 替换为你要使用的图片路径(纵向)
     // 模拟传入的是blob ，blob不好存储，先转换成base64存储到浏览器
